--- a/crowdFunding.Web/Views/User/Details.cshtml
+++ b/crowdFunding.Web/Views/User/Details.cshtml
@@ -48,85 +48,15 @@
                 Joined on @Model.User.CreatedOn.ToString("d")
             </span>
         </p>
-
-        <button type="button" id="js-about-button" class="btn btn-dark">About</button>
-        <span><button type="button" id="js-backedlist-button" class="btn btn-dark">Backed<span class="count"><sup>@Model.User.BackedProjectsList.Count</sup></span></button></span>
-        <span><button type="button" id="js-createdlist-button" class="btn btn-dark">Created<span class="count"><sup>@Model.User.CreatedProjectsList.Count</sup></span></button></span>
-
-    </div>
-</div>
-
-<div class="overlaping position-relative">
-    <div class="row user_row mt-3" id="js-about-row">
-        <div class="col-md-1"></div>
-        <div class="col-md-2">
-            <h3 class="user_description mobile-space mt-5">
-                Description
-            </h3>
-        </div>
-        <div class="col-md-1"></div>
-        <div class="col-md-8">
-            <p class="user_desc mt-5">@Model.User.Description</p>
-        </div>
-    </div>
-
-    <div class="row user_row mt-3" id="js-backed-list-row">
-
-        @foreach (var p in Model.User.BackedProjectsList)
-        {
-            <div class="col-md-4">
-                <div class="card mt-5 shadow mb-5 bg-white rounded">
-                    <!-- Card image -->
-                    @*<img class="card-img-top img-fluid project_photo" src="@p.Photo"
-                         alt="Image can not be displayed" width="400" height="250">*@
-                    <!-- Card content -->
-                    <div class="card-body">
-                        <!-- Title -->
-                        <a href="@Url.Action("Details", "Project", new { id = p.ProjectId })">@p.Name</a>
-                        <!-- Text -->
-                        <p class="card-text mt-2">@p.Description</p>
-                        <ul class="list-group list-group-flush">
-                            @*<li class="list-group-item">
-                                by <a href="@Url.Action("Details", "User", new { id = p.ProjectCreatorId })">
-                                    @p.ProjectCreatorFirstName @p.ProjectCreatorLastName
-                                </a>, backed by @p.NumberOfBackers
-                            </li>*@
-                        </ul>
-                        <a href="@Url.Action("Search", "Project", new { category = p.Category})" class="nav-link text-dark mt-4"><u>@p.Category</u></a>
-                    </div>
-                </div>
+        <nav class="navbar navbar-inverse navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3">
+            <div class="container-fluid">                
+                <ul class="nav navbar-nav">
+                    <li class="nav-item">About</li>
+                    <li class="nav-item">Backed<span class="count"><sup>@Model.User.BackedProjectsList.Count</sup></span></li>
+                    <li class="nav-item">Created<span class="count"><sup>@Model.User.CreatedProjectsList.Count</sup></span></li>                    
+                </ul>
             </div>
-        }
+        </nav>
     </div>
-
-    <div class="row user_row mt-3" id="js-created-list-row">
-
-        @foreach (var p in Model.User.CreatedProjectsList)
-        {
-            <div class="col-md-4">
-                <div class="card mt-5 shadow mb-5 bg-white rounded">
-                    <!-- Card image -->
-                    <img class="card-img-top img-fluid project_photo" src="@p.Photos.ElementAt(0).Url"
-                         alt="Image can not be displayed" width="400" height="250">
-                    <!-- Card content -->
-                    <div class="card-body">
-                        <!-- Title -->
-                        <a href="@Url.Action("Details", "Project", new { id = p.ProjectId })">@p.Name</a>
-                        <!-- Text -->
-                        <p class="card-text mt-2">@p.Description</p>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">
-                                by <a href="@Url.Action("Details", "User", new { id = Model.User.UserId })">
-                                    @Model.User.FirstName @Model.User.LastName
-                                </a>
-                            </li>
-                            <li class="list-group-item">@p.AmountGathered €</li>
-                            <li class="list-group-item">@p.Percentage() funded</li>
-                        </ul>
-                        <a href="@Url.Action("Search", "Project", new { category = p.Category})" class="nav-link text-dark mt-4"><u>@p.Category</u></a>
-                    </div>
-                </div>
-            </div>
-        }
-    </div>
+    <div class="col-4"></div>
 </div>
