fixed index cards & search by name

--- a/crowdFunding.Web/Views/Home/Index.cshtml
+++ b/crowdFunding.Web/Views/Home/Index.cshtml
@@ -18,18 +18,29 @@
         <div class="content" id="content">
             @foreach (var p in Model)
             {
-                <div class="card card_home">
+                <div class="card card_home mt-4 shadow mb-5 bg-white rounded" style="padding-top:5px;">
                     <div class="inHeader">
-                        <img class="card-img-top" src="~/images/cat1.jpg" alt="Card image cap">
+                        @*<img class="card-img-top" src="~/images/cat1.jpg" alt="Card image cap">*@
+                        <img class="card-img-top img-fluid project_photo" src="@p.Photos.ElementAt(0).Url"
+                             alt="Image can not be displayed" width="400" height="250">
                         <div class="pos">
                             @p.Name
                         </div>
                     </div>
                     <div class="card-body">
-                        <p class="card-text">@p.Description</p>
+                        @*<p class="card-text">@p.Description</p>*@
+                        <a href="@Url.Action("Details", "Project", new { id = p.ProjectId })" class="stretched-link"></a>
+                        <p class="card-text mt-2">@p.Description</p>
                     </div>
-                    <div class="card-footer">
-                        <a href="#" class="btn btn-primary btn-sm">Details</a>
+                    <div class="card-footer by">
+                        @*<a href="#" class="btn btn-primary btn-sm">Details</a>*@
+                        by
+                        <a href="@Url.Action("Details", "User", new { id = p.UserId })">
+                            @p.User.FirstName @p.User.LastName
+                        </a>
+                        @*<li class="list-group-item">@p.AmountGathered €</li>
+                            <li class="list-group-item">@p.Percentage() funded</li>*@
+
                     </div>
                 </div>
             }
