--- a/crowdFunding.Web/wwwroot/css/site.css
+++ b/crowdFunding.Web/wwwroot/css/site.css
@@ -91,15 +91,15 @@ body {
 }
 
 .card_home{
-    height: 250px;
+    /*height: 250px;
     width: 150px;
-    background-color: blue;
+    background-color: blue;*/
     margin-left: 20px;
     margin-right: 20px;
-    display: flex;
+    /*display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
+    flex-direction: column;*/
 }
 
 .inHeader {
@@ -311,3 +311,6 @@ body {
     margin-top : 80px;
 }
 
+.by{
+    font-size:8px;
+}
