--- a/crowdFunding.Web/Views/User/MyProfile.cshtml
+++ b/crowdFunding.Web/Views/User/MyProfile.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-@if (Model.User == null)
+@if (Model == null)
 {
     <div class="row text-center">
         <div class="col-md-3"></div>
@@ -59,10 +59,55 @@
 
 <div class="overlaping position-relative">
     <div class="row user_row mt-3" id="js-about-row">
-        <div class="col-md-1"></div>
+
         <div class="col-md-2">
             <h3 class="user_description mobile-space mt-5">
-                Description
+                First Name
+            </h3>
+        </div>
+        <div class="col-md-1"></div>
+        <div class="col-md-8">
+            <p class="user_desc mt-5">@Model.User.FirstName</p>
+        </div>
+        <div class="col-md-2">
+            <h3 class="user_description mobile-space mt-5">
+                Last Name
+            </h3>
+        </div>
+        <div class="col-md-1"></div>
+        <div class="col-md-8">
+            <p class="user_desc mt-5">@Model.User.LastName </p>
+        </div>
+        <div class="col-md-2">
+            <h3 class="user_description mobile-space mt-5">
+                E-mail
+            </h3>
+        </div>
+        <div class="col-md-1"></div>
+        <div class="col-md-8">
+            <p class="user_desc mt-5">@Model.User.Email</p>
+        </div>
+        <div class="col-md-2">
+            <h3 class="user_description mobile-space mt-5">
+                Country
+            </h3>
+        </div>
+        <div class="col-md-1"></div>
+        <div class="col-md-8">
+            <p class="user_desc mt-5">@Model.User.Country</p>
+        </div>
+        <div class="col-md-2">
+            <h3 class="user_description mobile-space mt-5">
+                Created On
+            </h3>
+        </div>
+        <div class="col-md-1"></div>
+        <div class="col-md-8">
+            <p class="user_desc mt-5">@Model.User.CreatedOn</p>
+        </div>
+        <div class="col-md-2">
+            <h3 class="user_description mobile-space mt-5">
+                My Description
             </h3>
         </div>
         <div class="col-md-1"></div>
@@ -81,7 +126,7 @@
                 <div class="card mt-5 shadow mb-5 bg-white rounded">
                     <!-- Card image -->
                     @*<img class="card-img-top img-fluid project_photo" src="@p.Photo"
-                         alt="Image can not be displayed" width="400" height="250">*@
+                        alt="Image can not be displayed" width="400" height="250">*@
                     <!-- Card content -->
                     <div class="card-body">
                         <!-- Title -->
@@ -91,8 +136,8 @@
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item">
                                 @*by <a href="@Url.Action("Details", "User", new { id = p.ProjectCreatorId })">
-                                    @p.ProjectCreatorFirstName @p.ProjectCreatorLastName
-                                </a>, backed by @p.NumberOfBackers*@
+                                        @p.ProjectCreatorFirstName @p.ProjectCreatorLastName
+                                    </a>, backed by @p.NumberOfBackers*@
                             </li>
                         </ul>
                         <a href="@Url.Action("Search", "Project", new { category = p.Category})" class="nav-link text-dark mt-4"><u>@p.Category</u></a>
@@ -106,30 +151,33 @@
 
         @foreach (var p in Model.User.CreatedProjectsList)
         {
-            <div class="col-md-4">
-                <div class="card mt-5 shadow mb-5 bg-white rounded">
-                    <!-- Card image -->
-                    <img class="card-img-top img-fluid project_photo" src="@p.Photos.ElementAt(0).Url"
-                         alt="Image can not be displayed" width="400" height="250">
-                    <!-- Card content -->
-                    <div class="card-body">
-                        <!-- Title -->
-                        <a href="@Url.Action("Details", "Project", new { id = p.ProjectId })">@p.Name</a>
-                        <!-- Text -->
-                        <p class="card-text mt-2">@p.Description</p>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">
-                                by <a href="@Url.Action("Details", "User", new { id = Model.User.UserId })">
-                                    @Model.User.FirstName @Model.User.LastName
-                                </a>
-                            </li>
-                            <li class="list-group-item">@p.AmountGathered €</li>
-                            <li class="list-group-item">@p.Percentage() funded</li>
-                        </ul>
-                        <a href="@Url.Action("Search", "Project", new { category = p.Category})" class="nav-link text-dark mt-4"><u>@p.Category</u></a>
+            if (p.Photos != null && p.Photos.Count != 0)
+            {
+                <div class="col-md-4">
+                    <div class="card mt-5 shadow mb-5 bg-white rounded">
+                        <!-- Card image -->
+                        <img class="card-img-top img-fluid project_photo" src="@p.Photos.ElementAt(0)"
+                             alt="Image can not be displayed" width="400" height="250">
+                        <!-- Card content -->
+                        <div class="card-body">
+                            <!-- Title -->
+                            <a href="@Url.Action("Details", "Project", new { id = p.ProjectId })">@p.Name</a>
+                            <!-- Text -->
+                            <p class="card-text mt-2">@p.Description</p>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">
+                                    by <a href="@Url.Action("Details", "User", new { id = Model.User.UserId })">
+                                        @Model.User.FirstName @Model.User.LastName
+                                    </a>
+                                </li>
+                                <li class="list-group-item">@p.AmountGathered €</li>
+                                <li class="list-group-item">@p.Percentage() funded</li>
+                            </ul>
+                            <a href="@Url.Action("Search", "Project", new { category = p.Category})" class="nav-link text-dark mt-4"><u>@p.Category</u></a>
+                        </div>
                     </div>
                 </div>
-            </div>
+            }
         }
     </div>
 </div>
