--- a/crowdFunding.Web/Views/Project/Search.cshtml
+++ b/crowdFunding.Web/Views/Project/Search.cshtml
@@ -48,8 +48,9 @@
                         </li>
                         <li class="list-group-item">@p.AmountGathered €</li>
                         <li class="list-group-item">@p.Percentage() funded</li>
+                        <li class="list-group-item"><a href="@Url.Action("Search", "Project", new { category = p.Category})" class="text-dark mt-4"><u>@p.Category</u></a></li>
                     </ul>
-                    <a href="@Url.Action("Search", "Project", new { category = p.Category})" class="nav-link text-dark mt-4"><u>@p.Category</u></a>
+                   
                 </div>
             </div>
         </div>
