--- a/crowdFunding.Web/Views/User/Details.cshtml
+++ b/crowdFunding.Web/Views/User/Details.cshtml
@@ -124,8 +124,8 @@
                             </li>
                             <li class="list-group-item">@p.AmountGathered €</li>
                             <li class="list-group-item">@p.Percentage() funded</li>
-                        </ul>
-                        <a href="@Url.Action("Search", "Project", new { category = p.Category})" class="nav-link text-dark mt-4"><u>@p.Category</u></a>
+                            <li class="list-group-item"><a href="@Url.Action("Search", "Project", new { category = p.Category})" class="text-dark mt-4"><u>@p.Category</u></a></li>
+                        </ul>                         
                     </div>
                 </div>
             </div>
