--- a/crowdFunding.Web/Views/User/Details.cshtml
+++ b/crowdFunding.Web/Views/User/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Details";
 }
 
-@if (Model.User == null)
+@if (Model == null)
 {
     <div class="row text-center">
         <div class="col-md-3"></div>
